# labs-oop

./: .gitignore  .gitmodules  README.md
exam-winter/: README.md  country.h  exam-winter.pro  mainwindow.ui  product.h  product_ie.cpp  product_ie.h  random.h  simulation.cpp
exam-winter/timetracking/: timetracking.txt
lab1/: CMakeLists.txt  README.md  dice.cpp  dice.h  dice_set.cpp  dice_set.h  graph.h  graph_adj_str.h  graph_adj_str.hxx  graph_mtrx.h  graph_mtrx.hxx  infnull.h  main.cpp
lab1-sem2/: README.md  country.cpp  country.h  glossary.txt  lab1-sem2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  product.cpp  product.h  product_ie.cpp  product_ie.h  random.h  simulation.cpp  simulation.h  source.qrc
lab1-sem2/tests/: main.cpp  tests.cpp
lab1-sem2/uml/: lab1-sem2-UML.vpp
lab2/: README.md
lab2-sem2/: CMakeLists.txt  README.md  benchmark.md
lab2-sem2/benchmark/: BenchmarkUtils.hpp  CMakeLists.txt  benchmark.cpp
lab2-sem2/gui/tree-gui/: drawingtree.cpp  drawingtree.h  drawingwidget.cpp  drawingwidget.h  drawingwindow.cpp  drawingwindow.h  drawingwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tree-gui.pro
lab2-sem2/gui/untitled/: widget.cpp  widget.h  widget.ui
lab2-sem2/src/: BTree.hpp  BTree.hxx  RedBlackTree.hpp  RedBlackTree.hxx  Tree.hpp  TreeAdapters.hpp  TreeAdapters.hxx  TreeCommands.hpp  TreeCommands.hxx  TreeFactory.hpp
lab2-sem2/tests/: CMakeLists.txt  TestParam.hpp  TestsBTree.cpp  TestsRedBlackTree.cpp  main.cpp
lab2/task1-SystemConfigFileEditor/: defectmodel.cpp  defectmodel.h  featuremodel.cpp  featuremodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.cpp  models.h  previewhighlighter.cpp  previewhighlighter.h  source.qrc  task1-SystemConfigFileEditor.pro  task1-SystemConfigFileEditor.pro.qtds  typemodel.cpp  typemodel.h  types.h  xmlparse.h
lab2/task1-SystemConfigFileEditor/graphs/: graph_adj_str.h  graph_adj_str.hxx  infnull.h
lab2/task1-SystemConfigFileEditor/rapidxml/: rapidxml_print.hpp
lab3a-sem2/: CMakeLists.txt  README.md
lab3a-sem2/benchmark/: CMakeLists.txt  benchmark.cpp
lab3a-sem2/src/: Matrix.hpp  Matrix.hxx
lab3a-sem2/tests/: CMakeLists.txt  MatrixTest.cpp
